# exercises

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/DataStructures/: Assert.cpp  Assert.h  BST.h  CMakeLists.txt  MemPool.cpp  MemPool.h  ObjectPool.h  Tests.cpp  Testy.cpp  Testy.h  TreesCommon.h  Vector.h  main.cpp
src/DataStructures/Private/: Tests.cpp
src/DataStructures/Public/DataStructures/: BST.h  BSTv1.h  Tests.h  TreesCommon.h  Vector.h
src/Memory/: Allocators.cpp  CMakeLists.txt  Memory.cpp  SharedHandle.h  Tests.cpp  Tests.h
src/Memory/Private/: Allocators.cpp  Allocators.h  Memory.cpp  Tests.cpp
src/Memory/Public/Memory/: MemDesc.h  Memory.h  SharedHandle.h  UniqueHandle.h
src/Utils/: Assert.cpp  Assert.h  Benchy.cpp  Benchy.h  CMakeLists.txt  Testy.cpp  Testy.h
src/Utils/Private/: Benchy.cpp
src/Utils/Public/Utils/: Benchy.h
